bk_ida/gccida/g0/instrument_edges
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/instrument_edges/src/profile.c:601:1: error: use of undeclared identifier 'edge_info_0'
edge_info_0 *inf; // [rsp+18h] [rbp-28h] 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/instrument_edges/src/profile.c:601:14: error: use of undeclared identifier 'inf'; did you mean 'if'?
edge_info_0 *inf; // [rsp+18h] [rbp-28h] 
             ^~~
             if
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/instrument_edges/src/profile.c:601:14: error: expected expression
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/instrument_edges/src/profile.c:625:1: error: use of undeclared identifier 'inf'
inf = ( edge_info_0 *)e->aux; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/instrument_edges/src/profile.c:625:22: error: expected expression
inf = ( edge_info_0 *)e->aux; 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/instrument_edges/src/profile.c:625:9: error: use of undeclared identifier 'edge_info_0'
inf = ( edge_info_0 *)e->aux; 
        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/instrument_edges/src/profile.c:626:19: error: use of undeclared identifier 'inf'; did you mean 'int'?
if ( ( *( _BYTE *)inf & 4) == 0 && ( *( _BYTE *)inf & 2) == 0 ) 
                  ^~~
                  int
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/instrument_edges/src/profile.c:626:19: error: expected expression
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/instrument_edges/src/profile.c:626:49: error: use of undeclared identifier 'inf'; did you mean 'int'?
if ( ( *( _BYTE *)inf & 4) == 0 && ( *( _BYTE *)inf & 2) == 0 ) 
                                                ^~~
                                                int
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/instrument_edges/src/profile.c:626:49: error: expected expression
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/instrument_edges/src/profile.c:635:22: error: use of undeclared identifier 'unk_8007A7'
v2 = ( const char *)&unk_8007A7; 
                     ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/instrument_edges/src/obj/profile.o] Error 1
